# LevelSetFusion-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  python_diagnostic_utility.py
cmake/: CUDAUtilities.cmake  DetectPython.cmake  FindPackages.cmake  Install_Uninstall.cmake  PythonUtilities.cmake  Targets.cmake  Tests.cmake
cmake/Hunter/: config.cmake
hunter/_Base/600199f/: SHA1
hunter/_Base/600199f/6489299/2253825/: SHA1  cache.cmake
hunter/_Base/600199f/81d2ad6/: SHA1
include/: lsf_config.h.in
src/: eigen_numpy.cpp  module.cpp
src/console/: colors.cpp  colors.hpp  pretty_printers.hpp  progress_bar.cpp  progress_bar.hpp
src/error_handling/: throw_assert.hpp
src/image_io/: imageio_stb_image.cpp  imageio_stb_image.hpp  png_eigen.cpp  png_eigen.hpp  stb_image_write.h
src/imageio/: imageio_stb_image.cpp  imageio_stb_image.hpp  png_eigen.cpp  png_eigen.hpp
src/logging/: convergence_report.cpp  convergence_report.hpp  ho_2d_result_store.cpp  ho_2d_result_store.hpp  logging.cpp  logging.hpp  serializable.hpp  tsdf_difference_statistics.cpp  warp_delta_statistics.cpp
src/math/: almost_equal.cpp  almost_equal.hpp  almost_equal.tpp  assessment.cpp  assessment.hpp  boolean_operations.hpp  checks.hpp  collection_comparison.cpp  collection_comparison.hpp  collection_comparison.tpp  conics.cpp  conics.hpp  container_traits.cpp  container_traits.hpp  container_traits.tpp  container_wrapper.cpp  container_wrapper.hpp  container_wrapper.tpp  convolution.cpp  convolution.hpp  cwise_binary.cpp  cwise_binary.hpp  cwise_binary.tpp  cwise_unary.cpp  cwise_unary.hpp  cwise_unary.tpp  extent.hpp  field_like.cpp  field_like.hpp  field_like.tpp  filtered_statistics.cpp  filtered_statistics.hpp  filtered_statistics.tpp  gradients.cpp  gradients.hpp  gradients.tpp  matrix2.hpp  matrix3.hpp  matrix_base.hpp  multiply.cpp  (+27 more)
src/nonrigid_optimization/: boolean_operations.hpp  data_term.cpp  data_term.hpp  field_resampling.cpp  field_resampling.hpp  field_warping.cpp  field_warping.hpp  field_warping.tpp  filtered_statistics.cpp  filtered_statistics.hpp  full_gradient.cpp  hierarchical_optimizer2d.cpp  hierarchical_optimizer2d.h  hierarchical_optimizer2d.hpp  hierarchical_optimizer3d.cpp  hierarchical_optimizer3d.hpp  optimizer2d.hpp  pyramid2d.cpp  pyramid2d.h  pyramid2d.hpp  pyramid3d.cpp  pyramid3d.hpp  pyramid3d.tpp  smoothing_term.cpp  smoothing_term.hpp  sobolev_optimizer2d.cpp  sobolev_optimizer2d.hpp  warping.cpp  warping.hpp  warping.tpp
src/nonrigid_optimization/hierarchical/: hierarchical_optimizer2d.cpp  hierarchical_optimizer2d.hpp  hierarchical_optimizer3d.cpp  hierarchical_optimizer3d.hpp  legacy_optimizer2d.cpp  legacy_optimizer2d.hpp  optimizer.cpp  optimizer.hpp  optimizer.tpp  optimizer2d.cpp  optimizer2d.hpp  optimizer2d.tpp  optimizer2d_common.hpp  optimizer2d_log.cpp  optimizer2d_log.hpp  optimizer2d_telemetry.cpp  optimizer2d_telemetry.hpp  optimizer_with_telemetry.cpp  optimizer_with_telemetry.hpp  optimizer_with_telemetry.tpp  pyramid.cpp  pyramid.hpp  pyramid.tpp  pyramid2d.cpp  pyramid2d.hpp  pyramid2d.tpp  pyramid3d.cpp  pyramid3d.tpp  telemetry.cpp  telemetry.hpp  telemetry.tpp  templated_optimizer2d.cpp  templated_optimizer2d.hpp  templated_optimizer2d.tpp  tikhonov_term.hpp
src/nonrigid_optimization/slavcheva/: data_term.cpp  data_term.hpp  full_gradient.cpp  full_gradient.hpp  optimizer2d.cpp  optimizer2d.hpp  smoothing_term.cpp  smoothing_term.hpp  sobolev_optimizer2d.cpp  sobolev_optimizer2d.hpp
src/python_export/: conversion_tests.cpp  conversion_tests.hpp  eigen_numpy.cpp  eigen_numpy.hpp  eigen_numpy_list.cpp  eigen_numpy_matrix.cpp  eigen_numpy_tensor.cpp  hierarchical_optimizer.cpp  hierarchical_optimizer.hpp  hierarchical_optimizer.tpp  logging.cpp  logging.hpp  math.cpp  math.hpp  numpy_conversions_shared.cpp  numpy_conversions_shared.hpp  sdf_2_sdf_optimizer.cpp  sdf_2_sdf_optimizer.hpp  sdf_2_sdf_optimizer.tpp  slavcheva_optimizer.cpp  slavcheva_optimizer.hpp  telemetry.cpp  telemetry.hpp  telemetry.tpp  test_code.hpp  tsdf.cpp  tsdf.hpp
src/rigid_optimization/: sdf_2_sdf_optimizer.cpp  sdf_2_sdf_optimizer.hpp  sdf_2_sdf_optimizer.tpp  sdf_2_sdf_optimizer2d.cpp  sdf_2_sdf_optimizer2d.hpp  sdf_gradient_wrt_transformation.hpp  sdf_gradient_wrt_transformation2d.cpp  sdf_gradient_wrt_transformation2d.hpp  sdf_gradient_wrt_transformation_matrix.cpp  sdf_gradient_wrt_transformation_matrix.tpp  sdf_gradient_wrt_transformation_tensor.cpp  sdf_gradient_wrt_transformation_tensor.tpp  sdf_weight.hpp  sdf_weight_matrix.cpp  sdf_weight_matrix.tpp  sdf_weight_tensor.cpp  sdf_weight_tensor.tpp
src/telemetry/: convergence_report.cpp  convergence_report.hpp  convergence_report.tpp  ho_2d_result_store.cpp  ho_2d_result_store.hpp  optimization_iteration_data.cpp  optimization_iteration_data.hpp  optimization_iteration_data.tpp  tsdf_difference_statistics.cpp  tsdf_difference_statistics.hpp  tsdf_difference_statistics.tpp  warp_delta_statistics.cpp  warp_delta_statistics.hpp  warp_delta_statistics.tpp
src/traversal/: field_traversal_cpu.hpp  index_raveling.hpp
src/tsdf/: common.hpp  ewa.cpp  ewa.hpp  ewa_2d.cpp  ewa_2d_viz.cpp  ewa_3d.cpp  ewa_3d_viz.cpp  ewa_common.hpp  ewa_viz.hpp  generator.cpp  generator.hpp  generator.tpp  generator_crtp.cpp  generator_crtp.hpp  generator_crtp.tpp  generator_matrix.cpp  generator_matrix.tpp  generator_tensor.cpp  generator_tensor.tpp  interpolation_method.hpp  parameters.cpp  parameters.hpp  parameters.tpp  tsdf.hpp  tsdf_2d.cpp
tests/: common.cpp  common.hpp  test_checks.cpp  test_convolution.cpp  test_data_hierarchical_optimizer.hpp  test_data_math.hpp  test_data_tsdf.hpp  test_gradients.cpp  test_hierarchical_optimizer.cpp  test_image_io.cpp  test_math.cpp  test_resampling.cpp  test_sdf_2_sdf_optimizer.cpp  test_slavcheva_optimizer.cpp  test_tsdf.cpp
tests/data/: test_data_convolution.hpp  test_data_gradients.hpp  test_data_hierarchical_optimizer.hpp  test_data_image_io.hpp  test_data_math.hpp  test_data_sdf_2_sdf_optimizer.hpp  test_data_slavcheva_optimizer.hpp  test_data_tsdf.hpp
(+38 files in other folders)
